Replace setuptools and setup.py with hatch and pyproject.toml

--- a/.github/workflows/branch-man.yml
+++ b/.github/workflows/branch-man.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           repository: linkchecker/linkchecker
           ref: master
-          # Needed for setuptools_scm to extract LinkChecker version from tag
+          # Needed for hatch-vcs to extract LinkChecker version from tag
           # https://github.com/actions/checkout/issues/249
           fetch-depth: 0
 
@@ -26,8 +26,8 @@ jobs:
       - name: Install Python packages
         run: >
             pip3 install dnspython beautifulsoup4 requests \
-                         sphinx sphinx_epytext sphinx_rtd_theme sphinx-sitemap \
-                         sphinx-intl setuptools_scm
+                         hatch hatch-vcs sphinx sphinx_epytext sphinx_rtd_theme \
+                         sphinx-sitemap sphinx-intl
 
       - name: Prepare git environment
         run: |
@@ -36,15 +36,11 @@ jobs:
             git checkout -b man-updates
             git remote add local ${{ github.server_url }}/${{ github.repository }}
 
-      - name: Create application version number
-        run: >
-            python3 setup.py build
-
       - name: Build man pages
         run: |
-            make -C doc locale
+            hatch -e doc run locale
             git commit -a -m "Update doc translation catalogs"
-            make -C doc man
+            hatch -e doc run man
             git commit -a -m "Update man pages"
 
       - name: Build application translations catalogs
