--- a/doc/Makefile
+++ b/doc/Makefile
@@ -16,7 +16,7 @@ man:
 	make -C src man; \
 	make -C src -e SPHINXOPTS="-D language='de' -t de" LANGUAGE="de" man
 
-# check all makefiles for formatting warnings
+# check all man files for formatting warnings
 check:
 	@for loc in $(LOCALES); do \
 	  for manfile in $(MANFILES); do \
