Fix install with pip git+https
pip only uses the wheel target.

Save building the metadata twice as a result in GitHub workflows and
update documentation.md.

--- a/.github/workflows/branch-man.yml
+++ b/.github/workflows/branch-man.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Build man pages
         run: |
-            python3 -m hatchling build --hooks-only
+            python3 -m hatchling build -t sdist --hooks-only
             make -C doc locale
             git commit -a -m "Update doc translation catalogs"
             make -C doc man
