--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build
         run: |
-            python3 -m hatchling build --hooks-only
+            python3 -m hatchling build -t sdist --hooks-only
             make -C doc code
             make -C doc html
 
