Write all metadata used to _release.py
Enables running without installing.
Removes use of importlib.metadata.

--- a/.github/workflows/branch-man.yml
+++ b/.github/workflows/branch-man.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Build man pages
         run: |
+            python3 -m hatchling build --hooks-only
             hatch -e doc run locale
             git commit -a -m "Update doc translation catalogs"
             hatch -e doc run man
