--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,9 @@ jobs:
           while ! test -S /var/run/clamav/clamd.ctl; do printf "."; sleep 1; done
 
       - name: Run tests
-        run: python -m tox -e py
+        run: |
+            python -m hatchling build --hooks-only
+            python -m tox -e py
 
       - name: Report to coveralls
         run: coveralls
