--- a/.github/workflows/branch-man.yml
+++ b/.github/workflows/branch-man.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Install Python packages
         run: >
             pip3 install dnspython beautifulsoup4 requests \
-                         hatch hatch-vcs sphinx sphinx_epytext sphinx_rtd_theme \
-                         sphinx-sitemap sphinx-intl
+                         hatchling hatch-vcs sphinx sphinx_epytext \
+                         sphinx_rtd_theme sphinx-sitemap sphinx-intl
 
       - name: Prepare git environment
         run: |
@@ -39,9 +39,9 @@ jobs:
       - name: Build man pages
         run: |
             python3 -m hatchling build --hooks-only
-            hatch -e doc run locale
+            make -C doc locale
             git commit -a -m "Update doc translation catalogs"
-            hatch -e doc run man
+            make -C doc man
             git commit -a -m "Update man pages"
 
       - name: Build application translations catalogs
