--- a/tests/configuration/data/config0.ini
+++ b/tests/configuration/data/config0.ini
@@ -12,6 +12,7 @@ debugmemory=1
 localwebroot=foo
 sslverify=/path/to/cacerts.crt
 maxnumurls=1000
+maxrequestspersecond=0.1
 maxrunseconds=1
 maxfilesizeparse=100
 maxfilesizedownload=100
