--- a/doc/src/Makefile
+++ b/doc/src/Makefile
@@ -1,6 +1,6 @@
 # You can set these variables from the command line, and also
 # from the environment for the first two.
-SPHINXOPTS    ?=
+SPHINXOPTS    ?= -W --keep-going
 SPHINXBUILD   ?= python3 -m sphinx.cmd.build
 SPHINXINTL    ?= python3 -m sphinx_intl.commands
 SOURCEDIR     = .
