--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py37, py38, py39, py310, py311
+envlist = py3{7,8,9,10,11}, minreqs
 
 [base]
 deps =
@@ -15,10 +15,12 @@ deps =
 [testenv]
 usedevelop = true
 deps =
-    -rrequirements.txt
+    !minreqs: -rrequirements.txt
+    minreqs: -rrequirements-min.txt
     {[base]deps}
 commands =
-    pytest {posargs:--cov=linkcheck}
+    !minreqs: pytest {posargs:--cov=linkcheck}
+    minreqs: pytest {posargs:--cov=linkcheck -c pytest-minreqs.ini}
 setenv =
     LC_ALL=en_US.utf-8
 
