--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
     # there's some overlap with publish-pages.yml, but this one runs on pull
     # requests, doesn't publish, and runs more doc checks
     name: docs
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Git clone
