Re-enable support for installing git archives
setuptools_scm 7 includes git archive support. hatch-vcs
currently requires a minimium of 6.4, ensure 7 is installed.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,9 @@ dependencies = [
 
 [build-system]
 requires = [
-    "hatchling>=1.8.0",
+    "hatchling >= 1.8.0",
     "hatch-vcs",
+    "setuptools-scm >= 7.0.5",
 ]
 build-backend = "hatchling.build"
 
