Add linting with Pylint to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -150,6 +150,7 @@ jobs:
         toxenv:
           - flake8
           - check-python-versions
+          - pylint
           - yamllint
 
     steps:
