--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,13 @@ deps = check-python-versions
 skip_install = true
 commands = check-python-versions {posargs}
 
+[testenv:pylint]
+deps =
+    pylint
+    -rrequirements.txt
+skip_install = true
+commands = pylint {posargs} -E linkcheck
+
 [testenv:yamllint]
 deps = yamllint
 skip_install = true
