Make TextLogger message wrapping configurable

--- a/tests/configuration/data/config0.ini
+++ b/tests/configuration/data/config0.ini
@@ -60,6 +60,7 @@ ignoreerrors=
 filename=imadoofus.txt
 PartS=Realurl
 encoding=utf-8
+wraplength=80
 colorparent=blink;red
 colorurl=blink;red
 colorname=blink;red
