--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
           - "3.9"
           - "3.10"
           - "3.11"
+          - "3.12-dev"
         toxenv: [py]
         include:
           - python-version: "3.8"
