Fix release workflow publish step
gh-action-pypi-publish failing on twine check:

 Checking dist/LinkChecker-10.3.0-py3-none-any.whl.crt: ERROR    InvalidDistribution: Unknown distribution format:
         'LinkChecker-10.3.0-py3-none-any.whl.crt'

--- a/.github/workflows/release-files.yml
+++ b/.github/workflows/release-files.yml
@@ -57,5 +57,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
+      - name: Remove Sigstore files
+        run: >
+            rm -f dist/*.{crt,sig,sigstore}
+
       - name: Publish distribution files to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
