[#782] Add values to configuration file
We want to allow specifying a warning to ignore for
each URL. If no regex is specified for the warning to ignore,
we'll ignore all warnings.

The tests still pass as they are, which means that unknown
values in the configuration file are simply ignored.

--- a/tests/configuration/data/config0.ini
+++ b/tests/configuration/data/config0.ini
@@ -27,6 +27,9 @@ nofollow=
   nofollow_imadoofus1
   nofollow_imadoofus2
 ignorewarnings=url-unicode-domain
+ignorewarningsforurls=
+  ^https://example.com/redirect http-redirected
+  ^https://example.com/another
 checkextern=True
 
 [authentication]
