Adding ignoreddosprotection configuration flag
This PR adds the following configuration flag:

ignoreddosprotection - ignore a missing 'LinkChecker' response header if
the user requests more than 6 requests per second.

--- a/tests/configuration/data/config0.ini
+++ b/tests/configuration/data/config0.ini
@@ -12,6 +12,7 @@ localwebroot=foo
 sslverify=/path/to/cacerts.crt
 maxnumurls=1000
 maxrequestspersecond=0.1
+ignoreddosprotection=0
 maxrunseconds=1
 maxfilesizeparse=100
 maxfilesizedownload=100
