--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -35,7 +35,7 @@ jobs:
           flavor: latest=true
           tags: |
             type=semver,pattern={{version}}
-            type=sha,prefix=
+            type=ref,event=branch
 
       - name: Build and push Docker image
         uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0  # v5.3.0
@@ -50,3 +50,4 @@ jobs:
           package-name: 'linkchecker'
           package-type: 'container'
           min-versions-to-keep: 20
+          delete-only-untagged-versions: 'true'
