--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,8 @@ jobs:
 
       - name: Git clone
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -114,6 +116,8 @@ jobs:
     steps:
       - name: Git clone
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: Install Ubuntu packages
         run: |
@@ -162,6 +166,8 @@ jobs:
     steps:
       - name: Git clone
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
