--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     pyopenssl
     pytest-xdist
     pytest-cov
-    GeoIP
+    GeoIP; sys_platform != 'darwin'
 
 [testenv]
 usedevelop = true
