--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
     name: Python ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
 
     strategy:
       matrix:
@@ -29,6 +29,9 @@ jobs:
         include:
           - python-version: "3.9"
             toxenv: minreqs
+          - python-version: "3.12"
+            os: macos-14
+            # arm64: https://github.com/orgs/community/discussions/102846
 
     services:
       httpbin:
