--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,10 +90,11 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install Python dependencies
+        # coverage is required by coverallsapp/github-action
         run: |
           python -m pip install -U pip
           python -m pip install -U hatchling hatch-vcs polib
-          python -m pip install -U tox
+          python -m pip install -U tox coverage
 
       - name: Wait for ClamAV to be ready
         run: |
